# flask-restful-api-sql

./: .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.py  constants.py  docker-compose.yaml  main.py  pyproject.toml
app/: app.py  configurators.py  session_generator.py
app/source/: errors.py  utilities.py  views.py
app/source/swagger/: course_details_get.yaml  courses_get.yaml  group_details_get.yaml  groups_get.yaml  student_courses_post.yaml  student_details_delete.yaml  student_details_get.yaml  student_details_patch.yaml  students_delete.yaml  students_get.yaml  students_post.yaml
cli/: __main__.py  logic.py
db/: helpers.py  logger.py
db/models/: __init__.py  course.py  group.py  student.py  student_course.py
test_app/: conftest.py  test_cli.py  test_configurator.py  test_errors.py  test_helpers.py  test_utilities.py  test_views.py
