[tool.poetry]
name = "task-10-sql"
version = "0.1.0"
description = ""
authors = ["Roman Savchneko <kriateddd@gmail.com>"]
readme = "README.md"
packages = [{include = "task_10_sql"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
sqlalchemy = "^2.0.4"
sqlalchemy-utils = "^0.40.0"
psycopg2 = "^2.9.5"
typer = "^0.7.0"
flask-restful = "^0.3.9"
flasgger = "^0.9.5"
uvicorn = "^0.20.0"
watchfiles = "^0.18.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pre-commit = "^3.0.4"
pytest = "^7.2.1"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
